made code preety

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 markers =
     login_guest: marker for guest login
+    need_review: marker for tests on review
 addopts = -v -rx --tb=line
